fix: prevent navbar list items from wrapping in horizontal layouts

--- a/src/components/navbar/placement.css
+++ b/src/components/navbar/placement.css
@@ -13,6 +13,7 @@
 
   & > :where(.navbar-list > li) {
     width: auto;
+    white-space: nowrap;
   }
 }
 
@@ -31,6 +32,7 @@
 
   & > :where(.navbar-list > li) {
     width: auto;
+    white-space: nowrap;
   }
 }
 
@@ -49,6 +51,7 @@
 
   & > :where(.navbar-list > li) {
     width: auto;
+    white-space: nowrap;
   }
 }
 
